# SBTN_Test

./: .dvcignore  .gitignore  Data_Harmonization.md  README.md  SOC_Documentation.md  SOC_LEAF_Example.ipynb  SOC_LEAF_Example.md  TODO.md  archives.dvc  purge_path.txt  pyproject.toml
LEAFs/: .gitignore  .gitkeep  README.md  sample_soc_summary.csv
data/: .gitkeep
data/crops/: AbsoluteDayTable.csv  K_Crop_Data.csv  crop_naming_index.csv  crop_residue_data.xlsx  fao_crop_yields_1423.csv  lu_c_factor_inventory.xlsx  spam_files.csv  spam_files.xlsx
data/templates/: TEMAPLE_rothc_data_prep_crop_scenarios_data.csv
documentation/: SOC_Documentation.md  Soil_Erosion_Documentation.md
examples/: New_LEAFs_Soil_Erosion_Example.ipynb  SOC_LEAF_Example.ipynb  SOC_LEAF_Example.md
examples/soc_ex_data/: maize_rothc_scenarios.csv
leaf_utils/: RothC_Raster.py  cropcalcs.py  map_calculations.py  map_plotting.py
src/leaf_utils/: PET.py  RothC_Core.py
src/sbtn_leaf/: PET.py  RothC_Core.py  RothC_Raster.py  __init__.py  cropcalcs.py  data_loader.py  map_calculations.py  map_plotting.py
tests/: conftest.py  test_data_loader_lazy.py  test_import.py  test_pet.py  test_rothc_core.py  test_rothc_raster.py
